--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
   <!--
       manifest.json provides metadata used when your web app is added to the
@@ -11,59 +10,19 @@
     -->
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
   <!-- Tell the browser it's a PWA -->
   <meta name="mobile-web-app-capable" content="yes">
   <!-- Tell iOS it's a PWA -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <title>React App</title>
-  <style type="text/css">
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: sans-serif;
-    }
 
-    .App {
-      text-align: center;
-    }
-
-    .App-logo {
-      height: 80px;
-    }
-
-    .App-header {
-      background-color: #222;
-      height: 150px;
-      padding: 20px;
-      color: white;
-    }
-
-    .App-title {
-      font-size: 1.5em;
-    }
-
-    .App-intro {
-      font-size: large;
-    }
-
-    @keyframes App-logo-spin {
-      from {
-        transform: rotate(0deg);
-      }
-      to {
-        transform: rotate(360deg);
-      }
-    }
-  </style>
 </head>
 
 <body>
-  <div id="root">
-    <div class="App">
-      <p>
-        Loading...
-      </p>
-    </div>
+  <div id="root">    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <script>
       if ('serviceWorker' in navigator) {
